TERA-INTERFACE/test.out
Usage: grep [OPTION]... PATTERN [FILE]...
Try `grep --help' for more information.
Usage: grep [OPTION]... PATTERN [FILE]...
Try `grep --help' for more information.
/usr/local/programs/custom/mpich/mpich-3.1.3/arch/x86_64-intel-2015-update5/bin/mpirun -np 1  /usr/local/programs/custom/terachem/terachem-1.9dev/build/terachem --inputfile=tera2.inp --UseMPI=2 --MPIPort=teraport19062 >> tera2.out 2>&1 &
grep: tera2.out: No such file or directory
  File "tera-propagate.py", line 43
    byte_coords, 
              ^
SyntaxError: invalid syntax

===================================================================================
=   BAD TERMINATION OF ONE OF YOUR APPLICATION PROCESSES
=   PID 19115 RUNNING AT a33
=   EXIT CODE: 1
=   CLEANING UP REMAINING PROCESSES
=   YOU CAN IGNORE THE BELOW CLEANUP MESSAGES
===================================================================================
